--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -6,14 +6,16 @@
 		<h2 style="text-align:center">Identificaci&oacute;n</h2>
 
 		<div class="card card-container">
-			<img id="profile-img" class="profile-img-card" src="/imgs/avatar_2x.png" />
+			<div class="text-center profile-img-card fa-3x">
+				<i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+			</div>
 			<p id="profile-name" class="profile-name-card"></p>
 			<form class="form-signin" ng-hide="$root.loginCarm">
 				<p>Utilice el nombre de usuario y contraseña que le han suministrado. Si tiene algún problema póngase en contacto con la Inspeccion General De Servicios, Consejeria Hacienda y Administración Publica de la Región de Murcia.</p>
 				<input autocomplete="on" type="text" name="username" ng-model="credentials.username" class="form-control" placeholder="Usuario" autofocus>
 				<input autocomplete="off" type="password" id="password" ng-model="credentials.password" class="form-control" placeholder="Contraseña">
 
-				<button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Entrar</button>
+				<button class="btn btn-lg btn-primary btn-block btn-signin" type="submit" ng-click="login(credentials)">Entrar</button>
 				<button class="btn btn-lg btn-default btn-block" ng-click="hideForm()">Volver</button>
 			</form>
 			<div ng-show="$root.loginCarm">
@@ -43,34 +45,22 @@
 
 
 <style>
-/*
- * Specific styles of signin component
- */
-/*
- * General styles
- */
  body{
-	/* background-repeat:no-repeat; background-size:cover; background-position:center center; */
 	height: 100vh;
 	background-repeat: no-repeat;
 	background-image: linear-gradient(rgb(247, 247, 247), rgb(138, 173, 197));
  }
 
 .card-container.card {
-	max-width: 350px;
+	max-width: 375px;
 	padding: 30px 30px;
 }
 
-/*
- * Card component
- */
 .card {
 	background-color: #F7F7F7;
-	/* just in case there no content*/
 	padding: 20px 25px 30px;
 	margin: 0 auto 25px;
 	margin-top: 50px;
-	/* shadows and rounded borders */
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
@@ -80,31 +70,17 @@
 }
 
 .profile-img-card {
-	width: 96px;
-	height: 96px;
-	margin: 0 auto 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	display: block;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
 }
 
-/*
- * Form styles
- */
 .profile-name-card {
 	font-size: 16px;
 	font-weight: bold;
 	text-align: center;
 	margin: 10px 0 0;
 	min-height: 1em;
-}
-
-.form-signin #inputEmail,
-.form-signin #inputPassword {
-	direction: ltr;
-	height: 44px;
-	font-size: 16px;
 }
 
 .form-signin input[type=password],
@@ -125,31 +101,5 @@
 	outline: 0;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
-}
-/*
-.btn.btn-signin {
-	
-	padding: 0px;
-	font-weight: 700;
-	font-size: 14px;
-	height: 36px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	border: none;
-	-o-transition: all 0.218s;
-	-moz-transition: all 0.218s;
-	-webkit-transition: all 0.218s;
-	transition: all 0.218s;
-}
-*/
-.forgot-password {
-	color: rgb(104, 145, 162);
-}
-
-.forgot-password:hover,
-.forgot-password:active,
-.forgot-password:focus{
-	color: rgb(12, 97, 33);
 }
 </style>
