--- a/public/partials/stats.html
+++ b/public/partials/stats.html
@@ -1,22 +1,21 @@
 <div class="row">
 	<div class="col-lg-12">
 		<h1>Estadísticas</h1>
-		<div style="clear:both" ng-if="graphs.length" class="row">
-			<div class="col-sm-12 col-lg-4 col-md-5">
+		<div style="clear:both" ng-if="graphs.length" class="row hidden-sm">
+			<div class="col-sm-12 col-lg-7 col-md-6">
 				<h3 class="text-center">Tablas</h3>
 			</div>
-			<div class="col-sm-12 col-lg-8 col-md-7 well graphid">
+			<div class="col-sm-12 col-lg-5 col-md-6 well graphid">
 				<h3 class="text-center">Gráficas</h3>
 			</div>
 		</div>
-		<div ng-repeat="graph in graphs" ng-if="graph.data" style="clear:both" class="row">
+		<div ng-repeat="graph in graphs" ng-if="graph.data1" style="clear:both" class="row">
 			<div class="btn btn-default pull-right">
 				<span ng-click="removeGraph($index )" class="glyphicon glyphicon-remove"></span>
 			</div>
-			<div class="clear">
-			</div>
 			<h5 class="text-danger text-center">{{graph.titulo}}</h5>
-			<div class="col-sm-12 col-lg-4 col-md-4">
+			<div class="clear"></div>
+			<div class="col-sm-12 col-lg-7 col-md-6">
 				<div class="table-resposive">
 					<table id="tabladatos{{$index}}" class="table table-striped table-bordered table-hover col-lg-12"  ng-class="{'table-condensed': $root.condensed}">
 						<thead>
@@ -31,63 +30,56 @@
 						</thead>
 						<tfoot>
 							<tr>
-								<th>Total<span ng-click="$root.exportXLS('tabladatos'+$index, 'estadisticas')" class="pull-right glyphicon glyphicon-floppy-disk">
-								</span>
-							</th>
-							<td class="numberCell">{{graph.sum|number}}</td>
-							<td class="numberCell">{{(graph.sum - graph.porcumplimentar)|number}}</td>
-							<td class="numberCell text-danger">{{ (100*(graph.sum - graph.porcumplimentar) /graph.sum)|number:2 }}%</td>
-							<td class="numberCell">{{graph.porcumplimentar|number}}</td>
-							<td class="numberCell text-danger">{{ (100*(graph.porcumplimentar) /graph.sum)|number:2 }}%</td>
-						</tr>
-					</tfoot>
-					<tbody>
-						<tr ng-repeat="row in graph.data |orderBy:orden:ascending" ng-click="addgraph(row, graph)" class="cursor">
-							<td ng-if="graph.campo=='codigo'">
-								<a href="/procedimiento/{{row._id}}">{{row._id}}</a>
-							</td>
-							<td ng-if="graph.campo!='codigo'">{{row._id}}</td>
-							<td class="numberCell">{{row.count |number}}</td>
-							<td class="numberCell">{{(row.count - row.porcumplimentar)|number}}</td>
-							<td class="numberCell text-danger">{{ (100*(row.count - row.porcumplimentar) /row.count)|number:2 }}%</td>
-							<td class="numberCell">{{row.porcumplimentar|number}}</td>
-							<td class="numberCell text-danger">{{ (100*(row.porcumplimentar) /row.count)|number:2 }}%</td>
-						</tr>
-					</tbody>
-				</table>
+								<th>Total
+									<span ng-click="$root.exportXLS('tabladatos'+$index, 'estadisticas')" class="pull-right glyphicon glyphicon-floppy-disk"></span>
+								</th>
+								<td class="numberCell">{{graph.sum|number}}</td>
+								<td class="numberCell">{{(graph.sum - graph.porcumplimentar)|number}}</td>
+								<td class="numberCell text-danger">{{ (100*(graph.sum - graph.porcumplimentar) /graph.sum)|number:2 }}%</td>
+								<td class="numberCell">{{graph.porcumplimentar|number}}</td>
+								<td class="numberCell text-danger">{{ (100*(graph.porcumplimentar) /graph.sum)|number:2 }}%</td>
+							</tr>
+						</tfoot>
+						<tbody>
+							<tr ng-repeat="row in graph.data |orderBy:orden:ascending" ng-click="addgraph(row, graph)" class="cursor">
+								<td ng-if="graph.campo=='codigo'">
+									<a href="/procedimiento/{{row._id}}">{{row._id}}</a>
+								</td>
+								<td ng-if="graph.campo!='codigo'">
+									{{row._id}}
+								</td>
+								<td class="numberCell">{{row.count |number}}</td>
+								<td class="numberCell">{{(row.count - row.porcumplimentar)|number}}</td>
+								<td class="numberCell text-danger">{{ (100*(row.count - row.porcumplimentar) /row.count)|number:2 }}%</td>
+								<td class="numberCell">{{row.porcumplimentar|number}}</td>
+								<td class="numberCell text-danger">{{ (100*(row.porcumplimentar) /row.count)|number:2 }}%</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
-		</div>
-		<div class="col-sm-12 col-lg-8 col-md-8 well graphid">
-			<h3>Número de procedimientos por agrupación</h3>
-			<nvd3-pie-chart noData="No hay datos que mostrar" data="graph.data" showXAxis="true" tooltips="true" showlabels="true" showLegend="true" interactive="true" height="300" width="{{widthgraph}}" x="xFunction()" y="yFunction()" tooltipcontent="toolTipContentFunction()" labeltype="percent">
-				<svg>
-				</svg>
-			</nvd3-pie-chart>
-			<h3>Número de procedimientos no cumplimentados por agrupación</h3>
-			<nvd3-pie-chart noData="No hay datos que mostrar" data="graph.data" showXAxis="true" tooltips="true" showlabels="true" showLegend="true" interactive="true" height="300" width="{{widthgraph}}" x="xFunction()" y="yFunction2()" tooltipcontent="toolTipContentFunction()" labeltype="percent">
-				<svg>
-				</svg>
-			</nvd3-pie-chart>
-			<h3>Número de procedimientos cumplimentados por agrupación</h3>
-			<nvd3-pie-chart noData="No hay datos que mostrar" data="graph.data" showXAxis="true" tooltips="true" showlabels="true" showLegend="true" interactive="true" height="300" width="{{widthgraph}}" x="xFunction()" y="yFunction3()" tooltipcontent="toolTipContentFunction()" labeltype="percent">
-				<svg>
-				</svg>
-			</nvd3-pie-chart>
-		</div>
-		<hr class="clear"/>
+			<div class="col-sm-12 col-lg-5 col-md-6 well graphid text-center">
+				<h3>Número de procedimientos por agrupación</h3>
+				<canvas class="chart chart-pie" chart-data="graph.data1" chart-labels="graph.labels" chart-options="options" style="height:100px; width:100px"></canvas> 
+				<h3>Número de procedimientos no cumplimentados por agrupación</h3>
+				<canvas class="chart chart-pie" chart-data="graph.data2" chart-labels="graph.labels" chart-options="options" style="height:100px; width:100px"></canvas> 
+				<h3>Número de procedimientos cumplimentados por agrupación</h3>
+				<canvas class="chart chart-pie" chart-data="graph.data3" chart-labels="graph.labels" chart-options="options" style="height:100px; width:100px"></canvas> 
+			</div>
+			<hr class="clear"/>
 		</div>
 		<div style="clear:both" class="row">
 			<div class="col-sm-12">
 				<p ng-if="graphs.length">Si pulsa sobre una fila de la tabla superior puede generar otra gráfica con la agrupación que haya seleccionado en la caja de debajo.</p>
 				<form class="form-horizontal">
 					<div class="form-group">
-						<label class="control-label col-md-3">Clave de agrupación:</label>
-						<div class="col-md-7">
-							<select ng-model="campo"  class="form-control">
+						<label class="col-sm-3 col-md-3 control-label">Clave de agrupación:</label>
+						<div class="col-sm-7 col-md-7">
+							<select ng-model="campo" class="form-control">
 								<option ng-repeat="o in campos" ng-value="o" ng-selected="o==campo">{{o|translate}}</option>
 							</select>
 						</div>
-						<div class="col-md-2">
+						<div class="col-sm-2 col-md-2 text-center">
 							<button ng-click="newGraph()" class="btn btn-danger">
 								<span class="glyphicon glyphicon-signal">
 								</span>
